--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -9,11 +9,11 @@
     <!-- app标题 -->
     <title>hangge</title>
     <!-- 使用iOS CSS主题样式-->
-    <link rel="stylesheet" href="css/framework7.ios.min.css">
+    <link rel="stylesheet" href="../css/framework7.ios.min.css">
     <!-- iOS related颜色样式 -->
-    <link rel="stylesheet" href="css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="../css/framework7.ios.colors.min.css">
     <!-- 自定义样式-->
-    <link rel="stylesheet" href="css/my-app.css">
+    <link rel="stylesheet" href="../css/my-app.css">
 </head>
 <body>
 <!-- Status bar overlay for full screen mode (PhoneGap) -->
@@ -68,8 +68,8 @@
     </div>
 </div>
 <!-- Framework7框架的js-->
-<script type="text/javascript" src="js/framework7.min.js"></script>
+<script type="text/javascript" src="../js/framework7.min.js"></script>
 <!-- 你的应用的js -->
-<script type="text/javascript" src="js/my-app.js"></script>
+<script type="text/javascript" src="../js/my-app.js"></script>
 </body>
 </html>
